--- a/stuff.html
+++ b/stuff.html
@@ -1,5 +1,4 @@
-
-        <meta http-equiv="refresh" content="0; url=https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/Cool_Stuff.html">
+<meta http-equiv="refresh" content="0; url=https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/Cool_Stuff.html">
         <script type="text/javascript">
             window.location.href = "https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/Cool_Stuff.html"
         </script>
@@ -7,6 +6,6 @@
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/Cool_Stuff..html'>-</a>.
+        If you are not redirected automatically, follow this <a href='https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/Cool_Stuff.html'>-</a>.
     </body>
 </html>
