--- a/unresoundtracker.html
+++ b/unresoundtracker.html
@@ -1,4 +1,4 @@
-
+<a rel="me" href="https://mastodon.social/@ryedai"> </a>
         <meta http-equiv="refresh" content="0; url=https://ry3yr.github.io/OSTR/Unresoundtracker/index.html">
         <script type="text/javascript">
             window.location.href = "https://ry3yr.github.io/OSTR/Unresoundtracker/index.html"
