--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,11 @@
-<meta http-equiv="refresh" content="0; url=https://rebrand.ly/alceablog#https://paper.wf/alcea/">
+<meta http-equiv="refresh" content="0; url=https://rebrand.ly/alceablog">
         <script type="text/javascript">
-            window.location.href = "https://rebrand.ly/alceablog#https://paper.wf/alcea/"
+            window.location.href = "https://rebrand.ly/alceablog"
         </script>
         <title>Homepage</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://rebrand.ly/alceablog#https://paper.wf/alcea/'>-</a>.
+        If you are not redirected automatically, follow this <a href='https://rebrand.ly/alceablog'>-</a>.
     </body>
 </html>
