--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+   <a rel="me" href="https://mastodon.social/@ryedai"></a>
+   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
    <link rel="manifest" href="/OSTR/Diarykeepers_Homepage/site.webmanifest">
