--- a/pixiv.html
+++ b/pixiv.html
@@ -1,12 +1,12 @@
 <a rel="me" href="https://mastodon.social/@ryedai"></a>
-<meta http-equiv="refresh" content="0; https://https://pixiv.me/ryedai1">
+<meta http-equiv="refresh" content="0; https://www.pixiv.net/en/users/75406576#https://pixiv.me/ryedai1">
     <script type="text/javascript">
-        window.location.href = "https://https://pixiv.me/ryedai1"
+        window.location.href = "https://www.pixiv.net/en/users/75406576#https://https://pixiv.me/ryedai1"
     </script>
     <title>Homepage</title>
 </head>
 <body>
     <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-    If you are not redirected automatically, follow this <a href='https://https://pixiv.me/ryedai1'>-</a>.
+    If you are not redirected automatically, follow this <a href='https://www.pixiv.net/en/users/75406576#https://pixiv.me/ryedai1'>-</a>.
 </body>
 </html>
