--- a/meteoctrl.html
+++ b/meteoctrl.html
@@ -6,7 +6,7 @@
   <title>Drag and Drop Folder</title>
 </head>
 <body>
-<img src="https://www.solar-fox.de/files/oneo/img/soledos/logos/meteocontrol_neu.png" width="30%"><br>
+  <a target="_blank" href="http://meteoctrllist.calabriapsg.repl.co/"><img src="https://www.solar-fox.de/files/oneo/img/soledos/logos/meteocontrol_neu.png" width="30%"></a><br>
   <input type="file" id="folder-selector" webkitdirectory directory="C:\Konfi-Data\Export"><br><br>
   <div id="dropzone">Drop a folder here</div>
   <input type="text" id="searchBox" placeholder="Search...">
