--- a/submitostrcase.html
+++ b/submitostrcase.html
@@ -1,12 +1,12 @@
 
-        <meta http-equiv="refresh" content="0; url=https://bitbucket.org/alceawisteria/ostr/issues/new#https://bitbucket.org/alceawisteria/ostr/issues/new">
+        <meta http-equiv="refresh" content="0; url=https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/SubmitCaseSelector.html">
         <script type="text/javascript">
-            window.location.href = "https://bitbucket.org/alceawisteria/ostr/issues/new#https://bitbucket.org/alceawisteria/ostr/issues/new"
+            window.location.href = "https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/SubmitCaseSelector.html"
         </script>
         <title>Homepage</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://bitbucket.org/alceawisteria/ostr/issues/new#https://bitbucket.org/alceawisteria/ostr/issues/new'>-</a>.
+        If you are not redirected automatically, follow this <a href='https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/SubmitCaseSelector.html'>-</a>.
     </body>
 </html>
