--- a/dekugames.html
+++ b/dekugames.html
@@ -1,11 +1,11 @@
-<meta http-equiv="refresh" content="0; url=http://alceawisteria.byethost7.com/PHP/0demo/2023-04-30-parse-json/parse.php">
+<meta http-equiv="refresh" content="0; url=https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/dekugames.html">
         <script type="text/javascript">
-            window.location.href = "http://alceawisteria.byethost7.com/PHP/0demo/2023-04-30-parse-json/parse.php"
+            window.location.href = "https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/dekugames.html"
         </script>
         <title>Homepage</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='http://alceawisteria.byethost7.com/PHP/0demo/2023-04-30-parse-json/parse.php'>-</a>.
+        If you are not redirected automatically, follow this <a href='https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/dekugames.html'>-</a>.
     </body>
 </html>
