--- a/ytsearch.html
+++ b/ytsearch.html
@@ -1,4 +1,8 @@
 
+<a target="_blank" href="https://ry3yr.github.io/ytsearch">YT General Search</a><br>
+<a target="_blank" href="https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/ytchannelsearch-dkpr.html">YTChannel Search</a><br>
+<a target="_blank" href="https://ry3yr.github.io/ytstudio">YTStudio Overview</a><br>
+
 <!DOCTYPE html>
 <html>
 <head>
