--- a/ebay.html
+++ b/ebay.html
@@ -1,4 +1,5 @@
 
+
 <html>
 <head>
     <title>eBay Search</title>
@@ -107,10 +108,18 @@
             searchUrlElement.href = searchUrl;
             searchUrlElement.target = '_blank';
             searchUrlElement.innerText = searchUrl;
-            document.body.appendChild(document.createElement('br'));
-            document.body.appendChild(document.createElement('br'));
-            document.body.appendChild(document.createElement('h2')).innerText = 'Search URL:';
-            document.body.appendChild(document.createElement('br'));
+
+            // Remove the existing link
+            var existingLink = document.querySelector('a');
+            if (existingLink) {
+            existingLink.parentNode.removeChild(existingLink);
+            }
+
+            // Append the new link to the document body
+            //document.body.appendChild(document.createElement('br'));
+            //document.body.appendChild(document.createElement('br'));
+            //document.body.appendChild(document.createElement('h2')).innerText = 'Search URL:';
+           //document.body.appendChild(document.createElement('br'));
             document.body.appendChild(searchUrlElement);
         });
     </script>
