--- a/ytstudio.html
+++ b/ytstudio.html
@@ -64,7 +64,7 @@ PCFET0NUWVBFIGh0bWw+CjxodG1sPgo8aGVhZD4KCiAgICA8dGl0bGU+RmV0Y2ggWW91VHViZSBDb21t
         <label for="channel_id">Channel ID:</label>
         <select id="channel_id" name="channel_id" required>
             <option value="UCrltGih11A_Nayz6hG5XtIw">Diarykeeper</option>
-            <option value="UCmIpOnd5BVx5Si2hp0WNKZw">Repeekyraid_Cero</option>
+            <option value="UCmIpOnd5BVx5Si2hp0WNKZw" selected>Repeekyraid_Cero</option>
         </select>
         <label for="api_key">API Key:</label>
         <input type="text" id="api_key" name="api_key" required>
@@ -108,56 +108,79 @@ document.addEventListener('DOMContentLoaded', function() {
         var items = playlistData.items;
 
         items.forEach(function(item) {
-          var videoId = item.snippet.resourceId.videoId;
-          var videoTitle = item.snippet.title;
-          var videoThumbnail = item.snippet.thumbnails.default.url;
-          var videoPublishedAt = item.snippet.publishedAt;
+  var videoId = item.snippet.resourceId.videoId;
+  var videoTitle = item.snippet.title;
+  var videoThumbnail = item.snippet.thumbnails.default.url;
+  var videoPublishedAt = item.snippet.publishedAt;
 
-          var videoContainer = document.createElement('div');
+  var videoContainer = document.createElement('div');
 
-          if (document.getElementById('show_thumbnail').checked) {
-            var thumbnailImg = document.createElement('img');
-            thumbnailImg.src = videoThumbnail;
-            thumbnailImg.alt = 'Thumbnail';
-            videoContainer.appendChild(thumbnailImg);
-          }
+  if (document.getElementById('show_thumbnail').checked) {
+    var thumbnailImg = document.createElement('img');
+    thumbnailImg.src = videoThumbnail;
+    thumbnailImg.alt = 'Thumbnail';
+    videoContainer.appendChild(thumbnailImg);
+  }
 
-          var videoLink = document.createElement('a');
-          videoLink.href = `https://www.youtube.com/watch?v=${videoId}`;
-          videoLink.textContent = videoTitle;
-          videoContainer.appendChild(videoLink);
+  var videoLink = document.createElement('a');
+  videoLink.href = `https://www.youtube.com/watch?v=${videoId}`;
+  videoLink.textContent = videoTitle;
+  videoContainer.appendChild(videoLink);
 
-          var videoIdText = document.createElement('p');
-          videoIdText.textContent = 'Video ID: ' + videoId;
-          videoContainer.appendChild(videoIdText);
+  var videoIdText = document.createElement('p');
+  videoIdText.textContent = 'Video ID: ' + videoId;
+  videoContainer.appendChild(videoIdText);
 
-          var uploadDateText = document.createElement('p');
-          uploadDateText.textContent = 'Upload Date: ' + videoPublishedAt;
-          videoContainer.appendChild(uploadDateText);
+  var uploadDateText = document.createElement('p');
+  uploadDateText.textContent = 'Upload Date: ' + videoPublishedAt;
+  videoContainer.appendChild(uploadDateText);
 
-          var commentsUrl = `https://www.googleapis.com/youtube/v3/commentThreads?part=snippet&maxResults=5&videoId=${videoId}&key=${apiKey}`;
+  var commentsUrl = `https://www.googleapis.com/youtube/v3/commentThreads?part=snippet&maxResults=5&videoId=${videoId}&key=${apiKey}`;
 
-          fetch(commentsUrl)
-            .then(function(commentsResponse) {
-              if (!commentsResponse.ok) {
-                throw new Error('Error: cURL comments request failed');
-              }
-              return commentsResponse.json();
-            })
-            .then(function(commentsData) {
-              var comments = commentsData.items;
+  fetch(commentsUrl)
+    .then(function(commentsResponse) {
+      if (!commentsResponse.ok) {
+        throw new Error('Error: cURL comments request failed');
+      }
+      return commentsResponse.json();
+    })
+    .then(function(commentsData) {
+      var comments = commentsData.items;
 
-              comments.forEach(function(comment) {
-                var commentText = document.createElement('p');
-                commentText.textContent = 'Comment: ' + comment.snippet.topLevelComment.snippet.textDisplay;
-                videoContainer.appendChild(commentText);
-              });
-            })
-            .catch(function(error) {
-              console.error(error);
-            });
+      comments.forEach(function(comment) {
+        var commentText = document.createElement('p');
+        commentText.textContent = 'Comment: ' + comment.snippet.topLevelComment.snippet.textDisplay;
+        videoContainer.appendChild(commentText);
+      });
+    })
+    .catch(function(error) {
+      console.error(error);
+    });
 
-          document.body.appendChild(videoContainer);
+  var videoRatingUrl = `https://www.googleapis.com/youtube/v3/videos?part=statistics&id=${videoId}&key=${apiKey}`;
+
+  fetch(videoRatingUrl)
+    .then(function(ratingResponse) {
+      if (!ratingResponse.ok) {
+        throw new Error('Error: cURL rating request failed');
+      }
+      return ratingResponse.json();
+    })
+    .then(function(ratingData) {
+      var statistics = ratingData.items[0].statistics;
+      var likeCount = statistics.likeCount;
+      var dislikeCount = statistics.dislikeCount;
+
+      var ratingText = document.createElement('p');
+      //ratingText.textContent = 'Rating: ' + likeCount + ' likes, '';
+      ratingText.textContent = 'Rating: ' + likeCount + ' likes, ' + dislikeCount + ' dislikes';
+      videoContainer.appendChild(ratingText);
+    })
+    .catch(function(error) {
+      console.error(error);
+    });
+
+  document.body.appendChild(videoContainer);
         });
       })
       .catch(function(error) {
@@ -166,4 +189,3 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 });
 </script>
-
