--- a/artrequest.html
+++ b/artrequest.html
@@ -1,11 +1,11 @@
-<meta http-equiv="refresh" content="0; http://alceawisteria.byethost7.com/PHP/0demo/2023-07-09-IssueTracker/artrq/artrq.php">
+<meta http-equiv="refresh" content="0; http://alcea-wisteria.de/PHP/0demo/2023-07-09-IssueTracker/artrq/artrq.php">
     <script type="text/javascript">
-        window.location.href = "http://alceawisteria.byethost7.com/PHP/0demo/2023-07-09-IssueTracker/artrq/artrq.php"
+        window.location.href = "http://alcea-wisteria.de/PHP/0demo/2023-07-09-IssueTracker/artrq/artrq.php"
     </script>
     <title>Homepage</title>
 </head>
 <body>
     <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-    If you are not redirected automatically, follow this <a href='http://alceawisteria.byethost7.com/PHP/0demo/2023-07-09-IssueTracker/artrq/artrq.php'>-</a>.
+    If you are not redirected automatically, follow this <a href='http://alcea-wisteria.de/PHP/0demo/2023-07-09-IssueTracker/artrq/artrq.php'>-</a>.
 </body>
 </html>
