--- a/unresoundtracker.html
+++ b/unresoundtracker.html
@@ -1,12 +1,12 @@
 <a rel="me" href="https://mastodon.social/@ryedai"> </a>
-        <meta http-equiv="refresh" content="0; url=https://ry3yr.github.io/OSTR/Unresoundtracker/index.html">
+        <meta http-equiv="refresh" content="0; url=https://alcea-wisteria.de/PHP/0demo/2023-09-24-YTClone/#https://ry3yr.github.io/OSTR/Unresoundtracker/index.html">
         <script type="text/javascript">
-            window.location.href = "https://ry3yr.github.io/OSTR/Unresoundtracker/index.html"
+            window.location.href = "https://alcea-wisteria.de/PHP/0demo/2023-09-24-YTClone/#https://ry3yr.github.io/OSTR/Unresoundtracker/index.html"
         </script>
         <title>Homepage</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://ry3yr.github.io/OSTR/Unresoundtracker/index.html'>-</a>.
+        If you are not redirected automatically, follow this <a href='https://alcea-wisteria.de/PHP/0demo/2023-09-24-YTClone/#https://ry3yr.github.io/OSTR/Unresoundtracker/index.html'>-</a>.
     </body>
 </html>
