--- a/unresoundtracker.html
+++ b/unresoundtracker.html
@@ -1,7 +1,7 @@
 <a rel="me" href="https://mastodon.social/@ryedai"> </a>
-        <meta http-equiv="refresh" content="0; url=https://alcea-wisteria.de/PHP/0demo/2023-09-24-YTClone/#https://ry3yr.github.io/OSTR/Unresoundtracker/index.html">
+        <meta http-equiv="refresh" content="0; url=https://alcea-wisteria.de/PHP/0demo/2023-09-24-YTClone/">
         <script type="text/javascript">
-            window.location.href = "https://alcea-wisteria.de/PHP/0demo/2023-09-24-YTClone/#https://ry3yr.github.io/OSTR/Unresoundtracker/index.html"
+            window.location.href = "https://alcea-wisteria.de/PHP/0demo/2023-09-24-YTClone/"
         </script>
         <title>Homepage</title>
     </head>
