--- a/php.html
+++ b/php.html
@@ -1,11 +1,12 @@
-<meta http-equiv="refresh" content="0; url=https://ry3yr.github.io/OSTR/release/0mine/documents/php.zip">
+
+<meta http-equiv="refresh" content="0; url=https://ry3yr.github.io/php.zip">
         <script type="text/javascript">
-            window.location.href = "https://ry3yr.github.io/OSTR/release/0mine/documents/php.zip"
+            window.location.href = "https://ry3yr.github.io/php.zip"
         </script>
         <title>Homepage</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://ry3yr.github.io/OSTR/release/0mine/documents/php.zip'>-</a>.
+        If you are not redirected automatically, follow this <a href='https://ry3yr.github.io/OSTR/release/0mine/documents/php.zip#old'>-</a>.
     </body>
 </html>
