--- a/python.html
+++ b/python.html
@@ -1,11 +1,12 @@
-<meta http-equiv="refresh" content="0; https://ry3yr.github.io/OSTR/release/0mine/documents/python.zip">
-    <script type="text/javascript">
-        window.location.href = "https://ry3yr.github.io/OSTR/release/0mine/documents/python.zip"
-    </script>
-    <title>Homepage</title>
-</head>
-<body>
-    <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-    If you are not redirected automatically, follow this <a href='https://ry3yr.github.io/OSTR/release/0mine/documents/python.zip'>-</a>.
-</body>
+
+<meta http-equiv="refresh" content="0; url=https://ry3yr.github.io/python.zip">
+        <script type="text/javascript">
+            window.location.href = "https://ry3yr.github.io/python.zip"
+        </script>
+        <title>Homepage</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='https://ry3yr.github.io/OSTR/release/0mine/documents/python.zip#old'>-</a>.
+    </body>
 </html>
