--- a/dekugames.html
+++ b/dekugames.html
@@ -1,11 +1,11 @@
-<meta http-equiv="refresh" content="0; url=https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/dekugames.html">
+<meta http-equiv="refresh" content="0; url=https://alcea-wisteria.de/PHP/0demo/2023-08-15-JSFiddle-Clone/htmls/2023-07-25-JS-Dekudeals-parser.html">
         <script type="text/javascript">
-            window.location.href = "https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/dekugames.html"
+            window.location.href = "https://alcea-wisteria.de/PHP/0demo/2023-08-15-JSFiddle-Clone/htmls/2023-07-25-JS-Dekudeals-parser.html"
         </script>
         <title>Homepage</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/dekugames.html'>-</a>.
+        If you are not redirected automatically, follow this <a href='https://alcea-wisteria.de/PHP/0demo/2023-08-15-JSFiddle-Clone/htmls/2023-07-25-JS-Dekudeals-parser.html#https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/dekugames.html'>-</a>.
     </body>
 </html>
