--- a/code.html
+++ b/code.html
@@ -1,4 +1,4 @@
-
+<meta http-equiv="refresh" content="0; https://alceawis.de/code">
 
 <style>
 body{font-family:Arial,sans-serif;line-height:1.5;margin:20px}a{text-decoration:none;color:#007bff}a:hover{text-decoration:underline}.commands-list{margin-bottom:10px}.commands-list a{margin-right:10px;border-radius:9px;padding:4px 8px;border:1px solid transparent}.commands-list a:last-child{margin-right:0}.commands-list span{margin-right:5px}.commands-list a[href$=".txt"]{border-color:#007bff}
