--- a/imgbblinkfinder.html
+++ b/imgbblinkfinder.html
@@ -1,10 +1,10 @@
-<meta http-equiv="refresh" content="0; https://alcea-wisteria.de/PHP//0demo/2023-08-07-ImageSitesDownloader/ImgBBLinkFind.php">
+<!--<meta http-equiv="refresh" content="0; https://alcea-wisteria.de/PHP//0demo/2023-08-07-ImageSitesDownloader/ImgBBLinkFind.php">
     <script type="text/javascript">
         window.location.href = "https://alcea-wisteria.de/PHP//0demo/2023-08-07-ImageSitesDownloader/ImgBBLinkFind.php"
     </script>
     <title>Homepage</title>
 </head>
-<body>
+<body>-->
     <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
     If you are not redirected automatically, follow this <a href='https://alcea-wisteria.de/PHP//0demo/2023-08-07-ImageSitesDownloader/ImgBBLinkFind.php'>-</a>.
 </body>
