--- a/php.html
+++ b/php.html
@@ -1,12 +1,129 @@
+<head>
+<link rel="icon" type="image/png" href="favicon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/OSTR/Diarykeepers_Homepage/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/OSTR/Diarykeepers_Homepage/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/OSTR/Diarykeepers_Homepage/favicon-16x16.png"><link rel="manifest" href="/OSTR/Diarykeepers_Homepage/site.webmanifest">
+<link rel="mask-icon" href="/OSTR/Diarykeepers_Homepage/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/OSTR/Diarykeepers_Homepage/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="/OSTR/Diarykeepers_Homepage/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+</head>
+<a rel="me" href="https://pb.todon.de/@alcea"> </a><br>
 
-<meta http-equiv="refresh" content="0; url=https://ry3yr.github.io/php.zip">
-        <script type="text/javascript">
-            window.location.href = "https://ry3yr.github.io/php.zip"
-        </script>
-        <title>Homepage</title>
-    </head>
-    <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://ry3yr.github.io/OSTR/release/0mine/documents/php.zip#old'>-</a>.
-    </body>
-</html>
+
+<a href="https://alcea-wisteria.de/PHP/0demo/00-PHP-Test/0test.php">PHPTest</a><br>
+<!----phptest-https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/Cool_Stuff.html-->
+<script type="text/javascript">
+    if (location.href.indexOf("#phptest") != -1) {
+    window.open("https://alcea-wisteria.de/PHP/0demo/00-PHP-Test/0test.php", "_self");
+    }
+</script>
+
+
+<a href="https://alcea-wisteria.de/PHP/0demo/2023-03-25-BoxNet/yourpage.html">ArtfetchCache</a><br>
+<!---ArtfetchCache-->
+<script type="text/javascript">
+    if (location.href.indexOf("#artfetchcache") != -1) {
+    var randomQuery = Math.random().toString(36).substring(7);
+var url = "https://alcea-wisteria.de/PHP/0demo/2023-03-25-BoxNet/yourpage.html?" + randomQuery;
+window.open(url, "_self");
+    }
+</script>
+
+
+
+<a href="https://alcea-wisteria.de/PHP/0demo/2023-03-25-BoxNet/BoxCOMArt.php">Artfetch(BoxCom)</a><br>
+<!---Artfetch--https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/Art.html-->
+<script type="text/javascript">
+    if (location.href.indexOf("#artfetch") != -1) {
+    window.open("https://alcea-wisteria.de/PHP/0demo/2023-03-25-BoxNet/BoxCOMArt.php", "_self");
+    }
+</script>
+
+
+<a href="https://alcea-wisteria.de/PHP/0demo/2023-07-15-DisplayMastodonProfile/alcea-mtd-tl.php">AboutAlceaMTD-TL</a><br>
+<!---About_Alcea-https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/About.html-->
+<script type="text/javascript">
+    if (location.href.indexOf("#aboutalcea") != -1) {
+    window.open("https://alcea-wisteria.de/PHP/0demo/2023-07-15-DisplayMastodonProfile/alcea-mtd-tl.php#https://rssatom.de/rssatom?reader=https://pb.todon.de/@alcea.rss", "_self");
+    }
+</script>
+
+<a href="https://alcea-wisteria.de/PHP/0demo/2023-07-09-IssueTracker/Tracker.php">IssueTracker</a><br>
+<!---SubmitCase--https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/SubmitCaseSelector.html-->
+<script type="text/javascript">
+    if (location.href.indexOf("#submitcase") != -1) {
+    window.open("https://alcea-wisteria.de/PHP/0demo/2023-07-09-IssueTracker/Tracker.php", "_self");
+    }
+</script>
+
+
+<a href="https://alcea-wisteria.de/PHP/0demo/2023-08-02-PDF-Renderer/pdfrender.php">PDFRender</a><br>
+<!---PhpPdfRenderer--https://ry3yr.github.io/pdf-->
+<script type="text/javascript">
+    if (location.href.indexOf("#pdfrender") != -1) {
+    window.open("https://alcea-wisteria.de/PHP/0demo/2023-08-02-PDF-Renderer/pdfrender.php", "_self");
+    }
+</script>
+
+<a href="https://alcea-wisteria.de/PHP/0demo/2023-08-04-TShirtDesignViewer/tshirts-link.php">TShirtDesignViewer</a><br>
+<!---https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/Cool_Stuff.html---->
+<script type="text/javascript">
+    if (location.href.indexOf("#tshirtdesignviewer") != -1) {
+    window.open("https://alcea-wisteria.de/PHP/0demo/2023-08-04-TShirtDesignViewer/tshirts-link.php", "_self");
+    }
+</script>
+
+<a href="https://alcea-wisteria.de/PHP/0demo/2023-08-04-DNS-Resolver/dnsresolver.php">DNSResolver</a><br>
+<!---https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/Pingtest.html---->
+<script type="text/javascript">
+    if (location.href.indexOf("#dnsresolver") != -1) {
+    window.open("https://alcea-wisteria.de/PHP/0demo/2023-08-04-DNS-Resolver/dnsresolver.php", "_self");
+    }
+</script>
+
+<a href="https://alcea-wisteria.de/PHP/0demo/2023-08-15-JSFiddle-Clone/jsfiddle-user.php">JSFiddleClone</a><br>
+<!---https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/Cool_Stuff.html---->
+<script type="text/javascript">
+    if (location.href.indexOf("#jsfiddleclone") != -1) {
+    window.open("https://alcea-wisteria.de/PHP/0demo/2023-08-15-JSFiddle-Clone/jsfiddle-user.php?mode=lowbandwidth", "_self");
+    }
+</script>
+
+<a href="https://alcea-wisteria.de/PHP/0demo/2023-09-05-FTP-Client/net2ftp/">FTPClient</a><br>
+<!---https://ry3yr.github.io/OSTR/Diarykeepers_Homepage/Cool_Stuff.html---->
+<script type="text/javascript">
+    if (location.href.indexOf("#ftpclient") != -1) {
+    window.open("https://alcea-wisteria.de/PHP/0demo/2023-09-05-FTP-Client/net2ftp/", "_self");
+    }
+</script>
+
+
+
+<a href="https://alcea-wisteria.de/PHP//0demo/2023-10-11-ZipWebsiteRender/rendersite.php">WebSiteZipRender</a><br>
+<!---n/A---->
+<script type="text/javascript">
+    if (location.href.indexOf("#websiterender") != -1) {
+    window.open("https://alcea-wisteria.de/PHP//0demo/2023-10-11-ZipWebsiteRender/rendersite.php", "_self");
+    }
+</script>
+
+
+<a href="https://alcea-wisteria.de/PHP/0demo/2023-07-22-VideoSitesDownloader/vidlii/Diarykeeper-n-repeekyraid-cero.php">WebSiteZipRender</a><br>
+<!---n/A---->
+<script type="text/javascript">
+    if (location.href.indexOf("#vidlii") != -1) {
+    window.open("https://alcea-wisteria.de/PHP/0demo/2023-07-22-VideoSitesDownloader/vidlii/Diarykeeper-n-repeekyraid-cero.php", "_self");
+    }
+</script>
+
+
+
+<br>
+<br>Other:<br>
+<a target="_blank" href="https://gg.gg/jsfiddledownloader">JSFiddleDownloader</a><br>
+<a target="_blank" href="http://gg.gg/yt-downloader">YTDownloader</a><br>
+<a target="_blank" href="https://gg.gg/hikarinoakariostdownloader">HikarinoakariOST</a><br>
+<a target="_blank" href="https://alcea-wisteria.de/PHP/0demo/2023-06-15-Extract-n-add-value-total/Extract-and-add-euro-values-keyword_+_line_search+url.php">EuroSumCalc</a><br>
+<a target="_blank" href="https://gg.gg/ygodeckrandomizer">YGODeckRndmzer</a><br>
