--- a/mtdalceacomment.html
+++ b/mtdalceacomment.html
@@ -1,3 +1,4 @@
-<script type="module" src="https://danielpecos.com/js/components/mastodon-comments.js"></script>
+<!--<script type="module" src="https://danielpecos.com/js/components/mastodon-comments.js"></script>-->
+<script type="module" src="mastodon-comments.js">
 <div id="comments_thread"></div>
-<mastodon-comments host="fosstodon.org" user="dpecos" tootId="111359759683825226"></mastodon-comments>
+<mastodon-comments host="pb.todon.de" user="alcea" tootId="111359759683825226"></mastodon-comments>
