--- a/mtdalceacomment.html
+++ b/mtdalceacomment.html
@@ -2,3 +2,20 @@
 <!---<script type="module" src="mastodon-comments.js">-->
 <div id="comments_thread"></div>
 <mastodon-comments host="pb.todon.de" user="alcea" tootId="111359759683825226"></mastodon-comments>
+
+
+<!-----Embed externally----
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+    var baseUrl = "https://ry3yr.github.io/mtdalceacomment";
+    $("#mtdcomm").load(baseUrl + "");
+});
+</script>
+<div class="formClass">
+    <div id="mtdcomm">
+    </div>
+</div>
+--->
+
+
