--- a/webring-outside.html
+++ b/webring-outside.html
@@ -2,9 +2,9 @@
 			<div id="selfinsertwebring" style="margin-bottom:5px">
 				<script>
                  var nameSelfWebring = "Alcea";
-                 var relationshipSelfWebring = "Wisteria";
-                 var charnameSelfWebring = "Alcea";
-                 var seriesSelfWebring = "vrns";
+                 var relationshipSelfWebring = "";
+                 var charnameSelfWebring = "";
+                 var seriesSelfWebring = "<a target=_blank href=https://ry3yr.github.io style=color:#A43379>AlceaWisteria</a>";
                  var imgurlSelfWebring = "https://ry3yr.github.io/latestpfp.png";
 
                  var templateWebring = document.createElement("selfinsertwebring");
