--- a/z_audioripperppl.html
+++ b/z_audioripperppl.html
@@ -1,6 +1,7 @@
 <div><div>= <span class="nn-marker" style="background-color: #ffff00">ytrippers</span>=</div>
 
 ---<New>--<br>
+* <a target="_blank" href="https://m.youtube.com/@CGInstrumentals" style=color:blue>CGInstrumentals</a> (12/2023)<br>
 * <a target="_blank" href="https://m.youtube.com/watch?v=j1MPQ_YBabo#https://m.youtube.com/@leeyo8920/videos">Yoo Lee</a>' Naruto unres (08/2023)<br>
 * <a target="_blank" href="https://www.youtube.com/@fruzi/videos#https://m.youtube.com/watch?v=drBC4ZrM1zA">fruz</a> Naruto unres (07/2023)<br>
 * <a target="_blank" href="https://www.youtube.com/@Blackcloud99/videos#https://m.youtube.com/watch?v=7-OhKjXnjB4" rel="nofollow noopener">BlackCloud999</a> YGO5DS ujnres (06/2023)<br>
