--- a/imgbb-alcea.html
+++ b/imgbb-alcea.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+<a target="_blank" href="https://alcea.imgbb.com/" style=color:gray>lnk</a><br><br>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
