--- a/jeannediekamikazediebin.html
+++ b/jeannediekamikazediebin.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="0; url=https://vgmdb.net/album/126243#https://avex.lnk.to/jeanne_BD-BOX?s=09">
+<meta http-equiv="refresh" content="0; url=https://vgmdb.net/album/126243#https://avex.lnk.to/jeanne_BD-BOX?s=09#https://alceawisteria.codeberg.page/OSTR/release/kkj/kkjofficial.html">
         <script type="text/javascript">
             window.location.href = "https://vgmdb.net/album/126243#https://avex.lnk.to/jeanne_BD-BOX?s=09"
         </script>
